Design intro section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,57 @@
     <title>Junho Park | Portfolio</title>
 </head>
 <body>
-    
+    <!-- HEADER -->
+    <header>
+        <div class="brush"></div>
+        <!-- NAVIGATOR -->
+        <nav>
+            <div class="row">
+                <ul class="main-nav">
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">PORTFOLIO</a></li>
+                    <li><a href="#">EXPERTISE</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- INTRO -->
+        <div class="row">
+            <div class="col span-1-of-2">
+                <div class="intro">
+                    <h1>&lt;&#47;&gt;<br>Hello, I'm Junho.</h1>
+                    <p>Nice to meet you! I'm a web designer & developer in Washington.</p>
+                </div>
+            </div>
+            <div class="col span-1-of-2">
+                <div class="col span-1-of-2">
+                   
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- ABOUT SECTION -->
+    <!-- <section class="about-section">
+        <div class="row">
+            <div class="col span-1-of-3">
+                <ion-icon name="bicycle-outline" class="icon"></ion-icon>
+                <h3>DEEP EXPERIENCE</h3>
+                <p>I worked in an educational program company in South Korea. I created various kinds of things here such as quiz, animation, game, etc. above web sites. It was a hard work for me as a starter, but great experience to learn and develop.</p>
+            </div>
+            <div class="col span-1-of-3">
+                <ion-icon name="color-wand-outline" class="icon"></ion-icon>
+                <h3>UI/UX DESIGN</h3>
+                <p>The importance was to inspire students to keep studying with our apps. It was a good chance to learn UI/UX design in practice.</p>
+            </div>
+            <div class="col span-1-of-3">
+                <ion-icon name="bicycle-outline" class="icon"></ion-icon>
+                <h3>DEEP EXPERIENCE</h3>
+                <p></p>
+            </div>
+        </div>
+    </section> -->
+
+    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </body>
 </html>
